--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
     <meta property="og:type" content="website">
 <meta property="og:title" content="Homepage">
-<meta property="og:url" content="https://zhwt-work.gitee.io/resource/index.html">
+<meta property="og:url" content="https://zhwt-xidian.github.io/index.html">
 <meta property="og:site_name" content="Homepage">
 <meta property="og:locale" content="en_US">
 <meta property="article:author" content="John Doe">
