--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
   
     <meta property="og:type" content="website">
 <meta property="og:title" content="Homepage">
-<meta property="og:url" content="https://zhwt-xidian.github.io/404.html">
+<meta property="og:url" content="https://zhwt-xidian.github.io/resource/404.html">
 <meta property="og:site_name" content="Homepage">
 <meta property="og:locale" content="en_US">
 <meta property="article:author" content="John Doe">
@@ -40,7 +40,7 @@
 
   
     
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="/resource/css/main.css">
 
   
 
