--- a/homepage/index.html
+++ b/homepage/index.html
@@ -508,7 +508,7 @@
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dong Pan（潘东）</td>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2011-July 2012</td>
         <tr>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Ming-Chao Li（凌海堂）</td>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Hai-Tang Lin（凌海堂）</td>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2011-July 2012</td>
         </tr>
         <tr>
@@ -592,7 +592,7 @@
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2019-July 2020</td>
         </tr>
         <tr>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Sen Tang（唐森）</td>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Lin Tang（唐林）</td>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2019-July 2020</td>
         </tr>
         <tr>
@@ -630,6 +630,14 @@
         <tr>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Fan Bu（步凡）</td>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2022-July 2023</td>
+        </tr>
+	<tr>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Yang-Hui Yuan（袁仰辉）</td>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2023-July 2024</td>
+        </tr>
+	<tr>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Qiang Li（李强）</td>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2023-July 2024</td>
         </tr>
     </table>
     </ul>
