--- a/homepage/index.html
+++ b/homepage/index.html
@@ -486,15 +486,15 @@
             </tr>
             <tr>
                <td><img class="lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAAaADAAQAAAABAAAAAQAAAADa6r/EAAAAC0lEQVQIHWNgAAIAAAUAAY27m/MAAAAASUVORK5CYII=" data-src="Hu-Ning%20Yang.jpg" width="70%"></td>
-               <td></td>
-               <td></td>
-               <td></td>
+               <td><img class="lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAAaADAAQAAAABAAAAAQAAAADa6r/EAAAAC0lEQVQIHWNgAAIAAAUAAY27m/MAAAAASUVORK5CYII=" data-src="Yi-Bang%20Li.png" width="70%"></td>
+               <td><img class="lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAAaADAAQAAAABAAAAAQAAAADa6r/EAAAAC0lEQVQIHWNgAAIAAAUAAY27m/MAAAAASUVORK5CYII=" data-src="Lu%20Liu.jpg" width="70%"></td>
+               <td><img class="lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAAaADAAQAAAABAAAAAQAAAADa6r/EAAAAC0lEQVQIHWNgAAIAAAUAAY27m/MAAAAASUVORK5CYII=" data-src="Yv-Ying%20Ma.jpg" width="70%"></td>
             </tr>
             <tr>
                <td style="text-align: center; font-size: 10pt; font-family: Roma">Hu-Ning Yang（杨虎宁）<br>BYD<br>比亚迪汽车</td>
-               <td style="text-align: center; font-size: 10pt; font-family: Roma"></td>
-               <td style="text-align: center; font-size: 10pt; font-family: Roma"></td>
-               <td style="text-align: center; font-size: 10pt; font-family: Roma"></td>
+               <td style="text-align: center; font-size: 10pt; font-family: Roma">Yi-Bang Li（李仪邦）<br>INDUSTRIAL AND COMMERCIAL BANK OF CHINA<br>中国工商银行</td>
+               <td style="text-align: center; font-size: 10pt; font-family: Roma">Lu Liu（刘璐）<br>HIKVISION<br>海康威视</td>
+               <td style="text-align: center; font-size: 10pt; font-family: Roma">Yv-Ying Ma（马钰莹）<br>Inspur<br>浪潮</td>
             </tr>
        </table>
         <p></p>
