--- a/homepage/index.html
+++ b/homepage/index.html
@@ -247,7 +247,7 @@
 </li>
 <li><p>W.-T. Zhang, Z.-Z. Huang, Y.-Y. Ma, D.-J. Zhang, “A Fast Adaptive LPCA Method for Fetal ECG Extraction Based on Multichannel Signals,” <em>IEEE Transactions on Instrumentation and Measurement</em>, Jan. 2024, 73(1): 1-11. <a target="_blank" rel="noopener" href="https://pan.baidu.com/share/init?surl=bjKL46loI849nkizLWThjQ&pwd=8216">PDF</a>(Extraction Code: 8216)</p>
 </li>	
-<li><p>Y. Li, W.-T. Zhang, S.-T. Lou, “A Dual-Region Speech Enhancement Method Based on Voiceprint Segmentation,” <em>Neural Networks</em>. <a target="_blank" rel="noopener" href="https://github.com/zhwt-xidian/Dual-Region-Speech-Enhancement_Code.git">Code</a></p>
+<li><p>Y. Li, W.-T. Zhang, S.-T. Lou, “A Dual-Region Speech Enhancement Method Based on Voiceprint Segmentation,” <em>Neural Networks</em>, 180 (2024) 106683. DOI: https://doi.org/10.1016/j.neunet.2024.106683. <a target="_blank" rel="noopener" href="https://github.com/zhwt-xidian/Dual-Region-Speech-Enhancement_Code.git">Code</a> <a target="_blank" rel="noopener" href="https://pan.baidu.com/s/1re0gQJFnf7GwvXvmR0d63A?pwd=8216">PDF</a>(Extraction Code: 8216)</p>
 </li>
 <li><p>D.-J. Zhang, W.-T. Zhang, Y.-Y. Ma, Z.-Z. Huang, “Anti-Aliasing Speech DOA Estimation Under Spatial Aliasing Conditions,” <em>IEEE/ACM Transactions on Audio, Speech and Language Processing</em>, June 2024, 32: 3324-3338. <a target="_blank" rel="noopener" href="https://pan.baidu.com/s/1ynm2L4Jq6ZQ7R9s0QGyuww?pwd=8216">PDF</a>(Extraction Code: 8216)</p>
 </li>
