--- a/homepage/index.html
+++ b/homepage/index.html
@@ -503,6 +503,17 @@
                <td style="text-align: center; font-size: 10pt; font-family: Roma">Lu Liu（刘璐）<br>HIKVISION<br>海康威视</td>
                <td style="text-align: center; font-size: 10pt; font-family: Roma">Yv-Ying Ma（马钰莹）<br>Inspur<br>浪潮</td>
             </tr>
+		    <tr>
+               <td><img class="lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAAaADAAQAAAABAAAAAQAAAADa6r/EAAAAC0lEQVQIHWNgAAIAAAUAAY27m/MAAAAASUVORK5CYII=" data-src="Yv%20Bai.jpg" width="70%"></td>
+               <td><img class="lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAAaADAAQAAAABAAAAAQAAAADa6r/EAAAAC0lEQVQIHWNgAAIAAAUAAY27m/MAAAAASUVORK5CYII=" data-src="Zhen-Zhen%20Huang.jpg" width="70%"></td>
+               <td><img class="lazy" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAAaADAAQAAAABAAAAAQAAAADa6r/EAAAAC0lEQVQIHWNgAAIAAAUAAY27m/MAAAAASUVORK5CYII=" data-src="Jian%20Cui.jpg" width="70%"></td>
+            </tr>
+            <tr>
+               <td style="text-align: center; font-size: 10pt; font-family: Roma">Yv Bai（白宇）<br>HONOR<br>荣耀</td>
+               <td style="text-align: center; font-size: 10pt; font-family: Roma">Zhen-Zhen Huang（黄珍珍）<br>Huawei<br>华为</td>
+               <td style="text-align: center; font-size: 10pt; font-family: Roma">Jian Cui（崔坚）<br>China Mobile Communications Group Co., Ltd<br>中国移动</td>
+            </tr>
+		   
        </table>
         <p></p>
         <li><p style="font-size: 15pt">Undergraduate. Students</p></li>
