--- a/homepage/index.html
+++ b/homepage/index.html
@@ -657,6 +657,18 @@
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Qiang Li（李强）</td>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2023-July 2024</td>
         </tr>
+	<tr>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Yv Bai（白宇）</td>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
+        </tr>
+	<tr>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Zhen-Zhen Huang（黄珍珍）</td>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
+        </tr>
+	<tr>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Jian Cui（崔坚）</td>
+            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
+        </tr>
     </table>
     </ul>
 </ul>
