--- a/homepage/index.html
+++ b/homepage/index.html
@@ -390,35 +390,6 @@
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Name</td>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Enrollment Date</td>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Subject</td>
-            </tr>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Lu Liu（刘璐）</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2021-</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Tensor machine learning and remote sensing image process</td>
-            <tr>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Yi-Bang Li（李仪邦）</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2021 -</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Tensor computation and software development</td>
-            </tr>
-            <tr>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Yv-Ying Ma（马钰莹）</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2021 -</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Direction Of Arrival estimation</td>
-            </tr>
-            <tr>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Zhen-Zhen Huang（黄珍珍）</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2022 -</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Machine learning and blind source separation</td>
-            </tr>
-            <tr>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Yv Bai（白宇）</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2022 -</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Remote sensing image process and attention mechanism</td>
-            </tr>
-            <tr>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Jian Cui（崔坚）</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2022 -</td>
-                <td style="text-align: center; font-size: 12pt; font-family: Roma">Change detecation and remote sensing image process</td>
-            </tr>
             <tr>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Ya-Ru Zhang（张亚茹）</td>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2023 -</td>
@@ -432,6 +403,31 @@
             <tr>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Hai-Bin Hu（胡海斌）</td>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2023 -</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Remote sensing image classification</td>
+            </tr>
+			<tr>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Hao-Yv Qin（秦豪宇）</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2024 -</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Tensor machine learning and remote sensing image process</td>
+            </tr>
+			<tr>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Zheng Zhang（章峥）</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2024 -</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Radar signal processing</td>
+            </tr>
+			<tr>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Yi-Bo Dang（党艺博）</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2024 -</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Remote sensing image process</td>
+            </tr>
+			<tr>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Zhi-Wei Shen（沈志伟）</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2024 -</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Change detecation and remote sensing image process</td>
+            </tr>
+			<tr>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Chen-Yang Zhao（赵晨阳）</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Sept. 2024 -</td>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Remote sensing image classification</td>
             </tr>
         </table>
@@ -656,18 +652,6 @@
 	<tr>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Qiang Li（李强）</td>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2023-July 2024</td>
-        </tr>
-	<tr>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Yv Bai（白宇）</td>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
-        </tr>
-	<tr>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Zhen-Zhen Huang（黄珍珍）</td>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
-        </tr>
-	<tr>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Jian Cui（崔坚）</td>
-            <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
         </tr>
     </table>
     </ul>
