--- a/homepage/index.html
+++ b/homepage/index.html
@@ -381,6 +381,11 @@
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Spet. 2022-</td>
                 <td style="text-align: center; font-size: 12pt; font-family: Roma">Microphone array signal processing and radar anti-jamming</td>
             </tr>
+			<tr>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Du Yv（杜煜）</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Spet. 2024-</td>
+                <td style="text-align: center; font-size: 12pt; font-family: Roma">Multimodal remote sensing image fusion</td>
+            </tr>
         </table>
         <p></p>
         <li style="font-size: 15pt">M.S. Students</li>
