--- a/homepage/index.html
+++ b/homepage/index.html
@@ -251,7 +251,7 @@
 </li>
 <li><p>D.-J. Zhang, W.-T. Zhang, Y.-Y. Ma, Z.-Z. Huang, “Anti-Aliasing Speech DOA Estimation Under Spatial Aliasing Conditions,” <em>IEEE/ACM Transactions on Audio, Speech and Language Processing</em>, June 2024, 32: 3324-3338. <a target="_blank" rel="noopener" href="https://pan.baidu.com/s/1ynm2L4Jq6ZQ7R9s0QGyuww?pwd=8216">PDF</a>(Extraction Code: 8216)</p>
 </li>
-<li><p>W.-T. Zhang, Y. Bai, S.-D. Zheng, J. Cui, Z.-Z. Huang, “Tensor Transformer for hyperspectral image classification,” <em>Pattern Recognition</em>, vol. 163, 2025. 111470 <a target="_blank" rel="noopener" href="https://authors.elsevier.com/a/1kgOi_jaxhq6Y">PDF</a></p>
+<li><p>W.-T. Zhang, Y. Bai, S.-D. Zheng, J. Cui, Z.-Z. Huang, “Tensor Transformer for hyperspectral image classification,” <em>Pattern Recognition</em>, vol. 163, 2025. 111470 <a target="_blank" rel="noopener" href="https://authors.elsevier.com/a/1kgOi_jaxhq6Y">PDF</a><a target="_blank" rel="noopener" href="https://github.com/zhwt-xidian/Tensor-Transformer-for-HSIC">Code</a></p>
 </li>
 <li><p>Z.-Z. Huang, W.-T. Zhang, Y. Li, J. Cui, Y.-R. Zhang, “TCGAN: Temporal Convolutional Generative Adversarial Network for Fetal ECG Extraction Using Single-channel Abdominal ECG,” <em>IEEE Journal of Biomedical and Health Informatics</em>, 2025, 29(5): 3478-3487. <a target="_blank" rel="noopener" href="https://ieeexplore.ieee.org/abstract/document/10818591">PDF</a></p>
 </li>
