--- a/homepage/index.html
+++ b/homepage/index.html
@@ -658,6 +658,18 @@
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Qiang Li（李强）</td>
             <td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2023-July 2024</td>
         </tr>
+	<tr>
+		<td style="text-align: center; font-size: 12pt; font-family: Roma">Jin-Dong Jiang（江晋东）</td>
+		<td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
+	</tr>
+	<tr>
+	<td style="text-align: center; font-size: 12pt; font-family: Roma">Yv-Chen Zhao（赵宇辰）</td>
+	<td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
+    </tr>
+	<tr>
+		<td style="text-align: center; font-size: 12pt; font-family: Roma">Mao-Yang Li（栗茂洋）</td>
+		<td style="text-align: center; font-size: 12pt; font-family: Roma">Dec. 2024-July 2025</td>
+	</tr>
     </table>
     </ul>
 </ul>
